WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201683
REGRESSION (245006): can't scroll in "read more" view in Eventbrite app
https://bugs.webkit.org/show_bug.cgi?id=201683
Summary
REGRESSION (245006): can't scroll in "read more" view in Eventbrite app
Antti Koivisto
Reported
2019-09-11 02:56:48 PDT
Because <body> has overflow:hidden.
Attachments
patch
(4.65 KB, patch)
2019-09-11 03:21 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2019-09-11 02:57:08 PDT
<
rdar://problem/54582602
>
Antti Koivisto
Comment 2
2019-09-11 03:21:56 PDT
Created
attachment 378552
[details]
patch
WebKit Commit Bot
Comment 3
2019-09-11 10:29:31 PDT
Comment on
attachment 378552
[details]
patch Clearing flags on attachment: 378552 Committed
r249770
: <
https://trac.webkit.org/changeset/249770
>
WebKit Commit Bot
Comment 4
2019-09-11 10:29:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug