REGRESSION (245006): can't scroll in "read more" view in Eventbrite app https://bugs.webkit.org/show_bug.cgi?id=201683 <rdar://problem/54582602>

Reviewed by Simon Fraser.

Source/WebCore:

* platform/RuntimeApplicationChecks.h:
* platform/cocoa/RuntimeApplicationChecksCocoa.mm:
(WebCore::IOSApplication::isEventbrite):

Source/WebKit:

Content <body> has 'overflow:hidden'.

* UIProcess/Cocoa/VersionChecks.h:
* UIProcess/RemoteLayerTree/RemoteScrollingCoordinatorProxy.cpp:
(WebKit::RemoteScrollingCoordinatorProxy::hasScrollableMainFrame const):

Fix by adding an app specific LinkedOnOrAfter quirk that always allows main frame scrolling.


Canonical link: https://commits.webkit.org/215333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@249770 268f45cc-cd09-0410-ab3c-d52691b4dbfc