Source/WebCore/platform/RuntimeApplicationChecks.h
@@ -96,6 +96,7 @@ bool isMoviStarPlus();
 WEBCORE_EXPORT bool isFirefox();
 WEBCORE_EXPORT bool isAppleApplication();
 WEBCORE_EXPORT bool isEvernote();
+WEBCORE_EXPORT bool isEventbrite();
 
 } // IOSApplication
 
