Source/WebCore/platform/cocoa/RuntimeApplicationChecksCocoa.mm
@@ -318,6 +318,12 @@ bool IOSApplication::isEvernote()
     return isEvernote;
 }
 
+bool IOSApplication::isEventbrite()
+{
+    static bool isEventbrite = applicationBundleIsEqualTo("com.eventbrite.attendee"_s);
+    return isEventbrite;
+}
+
 #endif
 
 } // namespace WebCore
